refactored PaperController